ontol/ontol-compiler/test-cases/error/domain/persisted_missing_header.on
 // ERROR persisted domain is missing domain header
def foo (
    rel. 'id': (rel* is: serial)
)
